[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Settings/Settings.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Buttons/MM_Button.tscn" type="PackedScene" id=2]

[node name="Settings" type="VBoxContainer"]
margin_right = 640.0
margin_bottom = 640.0
script = ExtResource( 1 )

[node name="Music" parent="." instance=ExtResource( 2 )]
margin_right = 640.0
buttonText = "MUSIC"

[node name="SFX" parent="." instance=ExtResource( 2 )]
margin_top = 72.0
margin_right = 640.0
margin_bottom = 140.0
buttonText = "SFX"

[node name="Back" parent="." instance=ExtResource( 2 )]
margin_top = 144.0
margin_right = 640.0
margin_bottom = 212.0
buttonText = "BACK"

[connection signal="buttonPressed" from="Music" to="." method="_on_Music_buttonPressed"]
[connection signal="buttonPressed" from="SFX" to="." method="_on_SFX_buttonPressed"]
[connection signal="buttonPressed" from="Back" to="." method="_on_Back_buttonPressed"]
